tests/ui/parser/recover-struct.rs
fn main() {
    struct Test {
        Very
        Bad //~ ERROR found `Bad`
        Stuff
    }
}

// ferrocene-annotations: fls_9ucqbbd0s2yo
// Struct Types
